# logos-arena

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/logos_arena_backend/: auth.py  db.py  llm_provider.py  main.py  models.py  orchestrator.py  store.py
backend/src/logos_arena_backend/api/: __init__.py  debates.py
backend/src/logos_arena_backend/schemas/: __init__.py  debate.py
backend/src/logos_arena_backend/services/: __init__.py  debates.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/debates/: page.tsx
frontend/app/debates/[id]/: page.tsx
frontend/app/debates/new/: page.tsx
frontend/components/: markdown-content.tsx  matrix-bits.tsx  new-debate-link.tsx  providers.tsx  require-auth-modal.tsx  step-loading-widget.tsx  topbar.tsx
frontend/lib/: api.ts  client-id.ts  i18n.tsx  local-gallery.ts
postman/: LogosArena-Collection.json
