[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "logos-arena-backend"
version = "0.1.0"
description = "Backend FastAPI do LogosArena"
requires-python = ">=3.14"
readme = "../README.md"
license = "MIT"
authors = [
  { name = "LogosArena", email = "dev@logosarena.local" },
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

